--- a/content/data/projects.json
+++ b/content/data/projects.json
@@ -11,7 +11,10 @@
             "UPenn"
         ],
         "image": "/images/project1.png",
-        "github": "https://github.com/meetkumar-doshi"
+        "github": "https://github.com/meetkumar-doshi",
+        "showOnHome": true,
+        "engagement": "12.5k",
+        "satisfaction": "4.9/5"
     },
     {
         "id": "slip-anchoring",
@@ -24,7 +27,10 @@
             "UPenn"
         ],
         "image": "/images/project2.jpg",
-        "github": "https://github.com/meetkumar-doshi"
+        "github": "https://github.com/meetkumar-doshi",
+        "showOnHome": true,
+        "engagement": "8.2k",
+        "satisfaction": "4.8/5"
     },
     {
         "id": "hopper",
@@ -37,7 +43,10 @@
             "UPenn"
         ],
         "image": "/images/project3.jpg",
-        "github": "https://github.com/meetkumar-doshi"
+        "github": "https://github.com/meetkumar-doshi",
+        "showOnHome": true,
+        "engagement": "15k",
+        "satisfaction": "4.95/5"
     },
     {
         "id": "brachiating",
@@ -50,7 +59,10 @@
             "UPenn"
         ],
         "image": "/images/project4.jpg",
-        "github": "https://github.com/meetkumar-doshi"
+        "github": "https://github.com/meetkumar-doshi",
+        "showOnHome": true,
+        "engagement": "6.7k",
+        "satisfaction": "4.7/5"
     },
     {
         "id": "sawyer",
@@ -63,7 +75,9 @@
             "UPenn"
         ],
         "image": "/images/project5.png",
-        "github": "https://github.com/meetkumar-doshi"
+        "github": "https://github.com/meetkumar-doshi",
+        "engagement": "10.1k",
+        "satisfaction": "4.85/5"
     },
     {
         "id": "optical-flow",
@@ -76,7 +90,9 @@
             "UPenn"
         ],
         "image": "/images/project6.jpg",
-        "github": "https://github.com/meetkumar-doshi"
+        "github": "https://github.com/meetkumar-doshi",
+        "engagement": "5.4k",
+        "satisfaction": "4.6/5"
     },
     {
         "id": "gyrotor",
@@ -89,6 +105,8 @@
             "Robotics"
         ],
         "image": "/images/project7.jpg",
-        "github": "https://github.com/meetkumar-doshi"
+        "github": "https://github.com/meetkumar-doshi",
+        "engagement": "12k",
+        "satisfaction": "4.9/5"
     }
 ]
