--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@types/three": "^0.182.0",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
