--- a/content/data/projects.json
+++ b/content/data/projects.json
@@ -4,11 +4,9 @@
         "title": "Jerboa Running Controller",
         "description": "Tailed monopod robot controller combining Inertial Reorientation and SLIP.",
         "longDescription": "Derived and simulated dynamics for a Simplified Helicopter and a falling cat model. Integrated SLIP models for the Jerboa monopod. Implemented Stance, Flight, and Raibert stepping controllers to achieve stable hopping.",
-        "tags": [
-            "Robotics",
-            "Control",
-            "Dynamics",
-            "UPenn"
+        "skills": [
+            "robotics",
+            "dynamics-control"
         ],
         "image": "/images/project1.png",
         "github": "https://github.com/meetkumar-doshi",
@@ -21,10 +19,9 @@
         "title": "Anchoring SLIP in Mechanisms",
         "description": "Hybrid systems modeling for Spring Loaded Inverted Pendulums (SLIP).",
         "longDescription": "Derived dynamics for Lossless and Energy-loss SLIP. Extended the model to a realistic 5-bar-linkage design, deriving full dynamics and building custom controllers for multi-jointed locomotion.",
-        "tags": [
-            "Hybrid Systems",
-            "Kinematics",
-            "UPenn"
+        "skills": [
+            "dynamics-control",
+            "robotics"
         ],
         "image": "/images/project2.jpg",
         "github": "https://github.com/meetkumar-doshi",
@@ -37,10 +34,9 @@
         "title": "Vertical Stable Hopper",
         "description": "Active hopper simulation with linear, air, and virtual electromagnetic springs.",
         "longDescription": "Started with Mass-Spring-Damper mechanics for a bouncing ball with thrust injection. Transitioned to an active pogo-stick hopper with 5-bar-linkage leg kinematics.",
-        "tags": [
-            "Actuation",
-            "Stability",
-            "UPenn"
+        "skills": [
+            "robotics",
+            "dynamics-control"
         ],
         "image": "/images/project3.jpg",
         "github": "https://github.com/meetkumar-doshi",
@@ -53,10 +49,8 @@
         "title": "Brachiating Robot Controller",
         "description": "Energy-based control for double-pendulum arm-swinging behavior.",
         "longDescription": "Analyzed LTI systems, energy basins, and stable fixed points. Wrote a systematic controller for double pendulum swinging behavior based on system parameters and joint velocities.",
-        "tags": [
-            "LTI Systems",
-            "Dynamics",
-            "UPenn"
+        "skills": [
+            "dynamics-control"
         ],
         "image": "/images/project4.jpg",
         "github": "https://github.com/meetkumar-doshi",
@@ -69,10 +63,9 @@
         "title": "Sawyer 7-DOF Modeling",
         "description": "Full rigid body dynamics modeling for the Rethink Robotics Sawyer manipulator.",
         "longDescription": "Computed homogeneous transformations, Jacobians, and full Lagrangian equations of motion. Calculated Inertial Matrix and total Kinetic Energy for the 7-degree-of-freedom arm.",
-        "tags": [
-            "Kinematics",
-            "Jacobians",
-            "UPenn"
+        "skills": [
+            "robotics",
+            "dynamics-control"
         ],
         "image": "/images/project5.png",
         "github": "https://github.com/meetkumar-doshi",
@@ -84,10 +77,9 @@
         "title": "Multiscale Optical Flow",
         "description": "Pyramidal feature detection and image warping based on optical flow estimation.",
         "longDescription": "Implemented a multiscale optical flow estimation function to warp images. Used pyramidal approaches for robust feature detection across varying image scales.",
-        "tags": [
-            "Computer Vision",
-            "Perception",
-            "UPenn"
+        "skills": [
+            "opencv",
+            "pytorch"
         ],
         "image": "/images/project6.jpg",
         "github": "https://github.com/meetkumar-doshi",
@@ -99,10 +91,10 @@
         "title": "GYROTOR Targeting Robot",
         "description": "Motion controlled, IR targeting robot based on sensor fusion of IMU data.",
         "longDescription": "Final year project involving Accelerometer and Gyroscope sensor fusion. Built a custom motion-controlled platform capable of precise IR targeting and autonomous navigation.",
-        "tags": [
-            "Embedded Systems",
-            "Sensor Fusion",
-            "Robotics"
+        "skills": [
+            "embedded-c",
+            "cpp",
+            "robotics"
         ],
         "image": "/images/project7.jpg",
         "github": "https://github.com/meetkumar-doshi",
