--- a/content/data/projects.json
+++ b/content/data/projects.json
@@ -10,9 +10,7 @@
         ],
         "image": "/images/project1.png",
         "github": "https://github.com/meetkumar-doshi",
-        "showOnHome": true,
-        "engagement": "12.5k",
-        "satisfaction": "4.9/5"
+        "showOnHome": true
     },
     {
         "id": "slip-anchoring",
@@ -25,9 +23,7 @@
         ],
         "image": "/images/project2.jpg",
         "github": "https://github.com/meetkumar-doshi",
-        "showOnHome": true,
-        "engagement": "8.2k",
-        "satisfaction": "4.8/5"
+        "showOnHome": true
     },
     {
         "id": "hopper",
@@ -40,9 +36,7 @@
         ],
         "image": "/images/project3.jpg",
         "github": "https://github.com/meetkumar-doshi",
-        "showOnHome": true,
-        "engagement": "15k",
-        "satisfaction": "4.95/5"
+        "showOnHome": true
     },
     {
         "id": "brachiating",
@@ -54,9 +48,7 @@
         ],
         "image": "/images/project4.jpg",
         "github": "https://github.com/meetkumar-doshi",
-        "showOnHome": true,
-        "engagement": "6.7k",
-        "satisfaction": "4.7/5"
+        "showOnHome": true
     },
     {
         "id": "sawyer",
@@ -68,9 +60,7 @@
             "dynamics-control"
         ],
         "image": "/images/project5.png",
-        "github": "https://github.com/meetkumar-doshi",
-        "engagement": "10.1k",
-        "satisfaction": "4.85/5"
+        "github": "https://github.com/meetkumar-doshi"
     },
     {
         "id": "optical-flow",
@@ -82,9 +72,7 @@
             "pytorch"
         ],
         "image": "/images/project6.jpg",
-        "github": "https://github.com/meetkumar-doshi",
-        "engagement": "5.4k",
-        "satisfaction": "4.6/5"
+        "github": "https://github.com/meetkumar-doshi"
     },
     {
         "id": "gyrotor",
@@ -97,8 +85,6 @@
             "robotics"
         ],
         "image": "/images/project7.jpg",
-        "github": "https://github.com/meetkumar-doshi",
-        "engagement": "12k",
-        "satisfaction": "4.9/5"
+        "github": "https://github.com/meetkumar-doshi"
     }
 ]
